tests/invalid/simple/RealConvert_CompileFail_2.whiley
int f(int x) where x>=0 && y>0:
    return 0.0

void System::main([string] args):
    f(1)
